eks-udemy/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: bookstore-ingress
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:
    - http:
        paths:

          - path: /
            pathType: Prefix
            backend:
              service:
                name: website
                port:
                  number: 80

          - path: /shop
            pathType: Prefix
            backend:
              service:
                name: shopui
                port:
                  number: 80

          - path: /api/books
            pathType: Prefix
            backend:
              service:
                name: shopapi
                port:
                  number: 3000
